# iso7816-c-reader

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
example/FreeRTOS/: .cproject  .gitignore  .mxproject  .project  FreeRTOS_example.ioc  STM32L443RCIx_FLASH.ld
example/FreeRTOS/.tracecompass/: .project
example/FreeRTOS/Drivers/SLOT_SE/: slot_SE.c  slot_SE.h  slot_SE_timeout.c  slot_SE_timeout.h
example/FreeRTOS/Inc/: FreeRTOSConfig.h  debug_config.h  main.h  platform_config.h  smartcard_config.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
example/FreeRTOS/Log/: debug.c  debug.h
example/FreeRTOS/Src/: cmsis_os2.c  freertos.c  main.c  os_systick.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_TIM.c  stm32l4xx_it.c
include/: sc_debug.h  sc_defs.h  sc_status.h  slot_itf.h  smartcard.h  smartcard_config.h
samples/stm32wb_slot/: WBSLOT.c  WBSLOT.h
src/: sc_context.h  sc_debug.c  sc_defs.c  smartcard.c
src/Maths/: EDC.c  EDC.h
src/include/: EDC.h  protocols.h  sc_debug.h
src/maths/: EDC.c
src/protocols/: protocol_APDU_T0.c  protocol_APDU_T1.c  protocol_TPDU_T0.c  protocol_TPDU_T1.c  protocol_atr.c  protocol_itf.h  protocol_pps.c  protocols.h
src/slots/: slot_sim.c  slot_sim.h
test/: CMakeLists.txt  slot_sim.c  slot_sim.h  test_apdu_t0.c  test_apdu_t1.c  test_atr.c  test_edc.c  test_pps.c  test_smartcard.c  test_tpdu_t0.c  test_tpdu_t1.c
